--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "dotenv": "^16.3.1",
+    "openai": "^4.0.0"
   }
 }
