--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+MONGODB_URI=your_mongodb_connection_string
+JWT_SECRET=your_jwt_secret
+CLIENT_URL=http://localhost:5173
 OPENAI_API_KEY=your_openai_api_key_here
+PORT=3000
