--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "dotenv": "^16.3.1",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "multer": "^1.4.5"
   }
 }
