--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.30.1",
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
-    "vite": "^5.0.8",
     "@vitejs/plugin-react": "^4.0.4",
-    "tailwindcss": "^3.4.4",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.16",
-    "autoprefixer": "^10.4.13"
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.0.8"
   }
 }
