--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.4",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "cookie-parser": "^1.4.6"
   }
 }
