--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.4",
